fix: category grid image width issue on safari

--- a/great-western-wine-theme/assets/scss/components/custom/_category.scss
+++ b/great-western-wine-theme/assets/scss/components/custom/_category.scss
@@ -69,6 +69,35 @@
     text-decoration: none;
     font-family: $helveticaBold;
   }
+
+  img {
+    width: 100%;
+    overflow: hidden;
+  }
+
+  .image-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.5) 0%,
+      rgba(0, 0, 0, 0) 20%,
+      rgba(0, 0, 0, 0) 50%
+    );
+    display: flex;
+    align-items: flex-end;
+    text-align: center;
+
+    .image-overlay-text {
+      padding: 0.5em;
+      width: 100%;
+      filter: drop-shadow(1px 1px 2px #000000);
+      color: #fff;
+    }
+  }
 }
 
 .category-grid-6,
